[package]
name = "formulars"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    # "x11",           # To support older Linux distributions (restores one of the default features)
] }
